<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="none"
    tools:context=".activity.UpdatePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:drawableLeft="@mipmap/back"
            android:gravity="center"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/update_password"
            android:textColor="@color/module_base_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.tengbo.module_personal_center.custom.view.NoEmojiEditText
            android:id="@+id/neet_old_password"
            style="@style/UpdatePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:hint="@string/please_input_old_password"
            android:inputType="textPassword" />

        <com.tengbo.module_personal_center.custom.view.NoEmojiEditText
            android:id="@+id/neet_new_password"
            style="@style/UpdatePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:hint="@string/please_input_new_password"
            android:inputType="textPassword" />

        <com.tengbo.module_personal_center.custom.view.NoEmojiEditText
            android:id="@+id/neet_re_new_password"
            style="@style/UpdatePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:hint="@string/please_re_input_new_password"
            android:inputType="textPassword" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="69dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="46dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@mipmap/valid_code" />

            <com.tengbo.module_personal_center.custom.view.NoEmojiEditText
                android:id="@+id/neet_valid_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableBottom="@drawable/underline"
                android:fontFamily="@font/pingfang_sc_bold"
                android:gravity="center"
                android:hint="@string/please_input_valid_code"
                android:inputType="text"
                android:maxLength="4"
                android:textColor="@color/module_base_color"
                android:textColorHint="@color/module_base_color"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/iv_valid_code"
                android:layout_width="70dp"
                android:layout_height="27dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp" />

            <TextView
                android:id="@+id/tv_refresh_valid_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pingfang_sc_bold"
                android:text="@string/refresh"
                android:textColor="@color/module_base_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_btn_submit" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/selector_btn_cancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
